js/js.translator/testData/incremental/invalidation/crossModuleReferences/lib2/l2.6.kt
fun qux() = baz("test") + 100
